[package]
name = "gf-core"
version = "0.3.0"
authors = ["CryptoPatrick <cryptopatrick@gmail.com>"]
description = """
Rust runtime for Grammatical Framework.
"""
documentation = "https://docs.rs/gf-core"
homepage = "https://github.com/cryptopatrick/gf-core"
repository = "https://github.com/cryptopatrick/gf-core"
keywords = ["grammar", "gf", "parser", "runtime"]
categories = ["parser-implementations"]
license = "MIT"
exclude = ["/.github/"]
autotests = false
edition = "2021"
rust-version = "1.88"

[dependencies]
pgf2json = "0.2.5"
regex = "1.11.1"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
bytes = "1.0"
